[gd_scene load_steps=4 format=3 uid="uid://cy7avt1sbgejp"]

[ext_resource type="Script" path="res://scene/menu/main.gd" id="1_3nfw8"]
[ext_resource type="Texture2D" uid="uid://d2ed2qws5orsx" path="res://assets/button/bg_menu.png" id="2_6scud"]
[ext_resource type="Theme" uid="uid://b02ir240sos5s" path="res://scene/menu/menu.tres" id="3_5r3nq"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3nfw8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 541.0
offset_top = 210.0
offset_right = 786.0
offset_bottom = 503.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
texture = ExtResource("2_6scud")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("3_5r3nq")
alignment = 1

[node name="PlayBtn" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 23)
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme = ExtResource("3_5r3nq")
text = "Start"
icon_alignment = 1

[node name="OptionBtn" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(53, 21)
layout_mode = 2
theme = ExtResource("3_5r3nq")
text = "Options"
icon_alignment = 1

[node name="ExitBtn" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(53, 21)
layout_mode = 2
theme = ExtResource("3_5r3nq")
text = "Exit"
icon_alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayBtn" to="." method="_on_play_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionBtn" to="." method="_on_option_btn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitBtn" to="." method="_on_exit_btn_pressed"]
